@@ -1,1 +1,20 @@
 # WKU-CSMS-with Material-UI
+
+---
+
+## 👉 Requirements
+
+- React - 18.2.0
+- Rreact-router-dom - 6.10.0
+- Mmaterial-UI-icons - 5.11.16
+- Material-UI - 5.12.1
+- Mui/x-data-grid - 6.2.0
+- Sass - 1.62.0
+   
+
+## vmArgs Setup
+
+```
+----module-path \"E:\\Application\\Java Material\\javafx-sdk-17.0.2\\lib\" --add-modules javafx.controls,javafx.fxml
+
+```
